feat: add notes
